<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.gueye.memoireprevention2018.activities.ForgetPasswordActivity">


    <android.support.v7.widget.Toolbar
        android:id="@+id/Forget_password_toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:background="@color/colorPrimary"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">

    </android.support.v7.widget.Toolbar>

    <RelativeLayout
        android:id="@+id/containerLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/Forget_password_toolbar"
        android:layout_margin="@dimen/container_layout_margin">

        <TextView
            android:id="@+id/login_welcome_msg"
            style="@style/LabelStyle"
            android:textColor="#999999"
            android:layout_marginTop="@dimen/layout_in_between_margins"
            android:text="@string/describe_forget_password_txt" />

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="220dp"
            android:id="@+id/textInputLayout">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/email_reset_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignBaseline="@+id/btn_forget_password"
                android:layout_alignBottom="@+id/btn_forget_password"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_marginEnd="11dp"
                android:layout_marginRight="11dp"
                android:hint="@string/email"
                android:inputType="textEmailAddress" />
        </android.support.design.widget.TextInputLayout>

        <Button
            android:id="@+id/btn_forget_password"
            style="@style/StrokeLargeButtonStyle"
            android:layout_width="match_parent"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/textInputLayout"
            android:layout_marginTop="55dp"
            android:text="@string/forget_password_btn_label" />

    </RelativeLayout>
</RelativeLayout>
